# mizu-node-worker

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
mizu_node_worker/: classifier.py  main.py  r2.py  run.py  worker.py
mizu_node_worker/embeddings/: domain_embeddings.py
mizu_validator/: classifier.py  main.py  worker.py
mizu_validator/embeddings/: domain_embeddings.py
tests/: test_classifier.py
