[tool.poetry]
name = "mizu_validator"
version = "0.1.0"
description = ""
authors = ["shudong <dongs2011@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.31.1"
torch = { url = "https://download.pytorch.org/whl/cpu/torch-2.2.2-cp311-none-macosx_10_9_x86_64.whl" }
transformers = "^4.45.2"
optimum = "^1.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "mizu_validator.main:start_dev"
start = "mizu_validator.main:start"
