[tool.poetry]
name = "mizu_node_worker"
version = "0.1.0"
description = ""
authors = ["shudong <dongs2011@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.115.0"
uvicorn = "^0.31.1"
torch = [
  { markers = "sys_platform == 'darwin' and platform_machine == 'arm64'", url = "https://download.pytorch.org/whl/cpu/torch-2.4.1-cp311-none-macosx_11_0_arm64.whl" },
  { markers = "sys_platform == 'darwin' and platform_machine == 'x86_64'", url = "https://download.pytorch.org/whl/cpu/torch-2.2.2-cp311-none-macosx_10_9_x86_64.whl" },
  { markers = "sys_platform == 'linux'", version = "2.4.1", source = "pypi" }
]
transformers = "^4.45.2"
optimum = "^1.23.1"
onnxruntime = "^1.19.2"
onnx = "^1.17.0"
rq = "^1.16.2"
boto3 = "^1.35.40"
redis = "^5.1.1"
numpy = "1.26"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pre-commit = "^4.0.1"
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "mizu_node_worker.main:start_dev"
start = "mizu_node_worker.main:start"
rq_worker = "mizu_node_worker.main:start_rq_worker"
worker = "mizu_node_worker.main:start_worker"